kustomize/base/api_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: rollout-canary
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:  
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"        
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: rogeriosilvarocha/api:0.1
          ports: 
          - containerPort: 8080
          resources:
            limits:
              memory: "128Mi"
              cpu: "600m"
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: api
spec:
  replicas: 5
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: api
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause:
            duration: 120
