kustomize/base/istio-default-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-gw
spec:
  selector:
    istio: ingressgateway
#  servers:
#  - port:
#      number: 80
#      name: http
#      protocol: HTTP
#    hosts:
#    - "prod.api.com"
